--- a/Organizate/app/src/main/res/values/strings.xml
+++ b/Organizate/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <string name="title_activity_fullscreen">FullscreenActivity</string>
+
+    <string name="alarm">Alarm</string>
+    <string name="title_activity_add">AddActivity</string>
 </resources>
