--- a/Organizate/app/src/main/res/values/strings.xml
+++ b/Organizate/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="place_hint">Event\'s place</string>
     <string name="repeat_hint">Activate repetition</string>
     <string name="duration_hint">Event\'s duration</string>
+
+    <string name="category_work">Work</string>
+    <string name="category_study">Study</string>
+    <string name="category_hoobie">Hoobie</string>
+    <string name="category_others">Others</string>
 </resources>
