--- a/Organizate/app/src/main/res/values/strings.xml
+++ b/Organizate/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_login">Sign In / Sign Up</string>
     <string name="title_editor">Activity editor</string>
     <string name="title_settings">Settings</string>
+    <string name="title_categories">Categories</string>
 
     <string name="alarm">Alarm</string>
 
